--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
 
 <aside class="bio-info">
   <div class="name">
-      Your Name Here
+      Nick
   </div>
 
   <div class="major">
-      Your Major
+      Computer Science
   </div>
 
   <div class="year">
@@ -170,7 +170,7 @@
   </div>
 
   <div class="whatido">
-      a short phrase you want people to see on every page
+      Hello everyone
   </div>
 
 
